--- a/page.html
+++ b/page.html
@@ -41,10 +41,14 @@
           <a href="#contact" class="hover:text-[#F0B100] transition">Contact</a>
         </li>
         <li>
-          <button
-            class="bg-[#F0B100] hover:bg-[#FE9A00] cursor-pointer text-white px-5 lg:px-6 py-2 lg:py-2.5 rounded-[4px] transition duration-300 font-medium text-[14px] lg:text-[16px]">
-            Hire Me
-          </button>
+          <a href="#contact"
+   class="inline-block bg-[#F0B100] hover:bg-[#FE9A00]
+          text-white px-5 lg:px-6 py-2 lg:py-2.5
+          rounded-[4px] transition duration-300
+          font-medium text-[14px] lg:text-[16px]">
+  Hire Me
+</a>
+
         </li>
       </ul>
 
@@ -90,10 +94,10 @@
         <div
           class="flex flex-col sm:flex-row lg:flex-col items-center lg:items-start justify-center gap-2 sm:gap-4 lg:gap-0">
           <p class="text-4xl sm:text-5xl md:text-6xl lg:text-[96px] font-bold leading-none text-white">
-            JOHN
+            ARSLAN
           </p>
           <p class="text-4xl sm:text-5xl md:text-6xl lg:text-[96px] font-bold leading-none text-[#FE9A00]">
-            DOE
+            ASLAM
           </p>
         </div>
       </div>
@@ -477,7 +481,7 @@
     </div>
   </section>
 
-  <section id="skills" class="mt-12 lg:mt-[80px] px-6 lg:px-0 max-w-[1280px] mx-auto pb-[80px]">
+  <section id="projects" class="mt-12 lg:mt-[80px] px-6 lg:px-0 max-w-[1280px] mx-auto pb-[80px]">
     <div class="w-full flex flex-col items-center justify-center gap-8 lg:gap-[64px]">
 
       <!-- Heading -->
@@ -635,7 +639,8 @@
     </div>
   </section>
 
-  <section class="w-full py-[80px] px-[84px]" id="#education">
+  <section class="w-full py-[60px] sm:py-[70px] lg:py-[80px] 
+       px-0 sm:px-0 md:px-12 lg:px-[84px]" id="education">
     <div class="w-full flex flex-col items-center justify-center gap-8 lg:gap-[64px]">
 
       <!-- Heading -->
@@ -666,7 +671,7 @@
           <!-- Center Vertical Line -->
           <div class="absolute left-1/2 top-0 h-full w-[2px] bg-[#FE9A00] -translate-x-1/2"></div>
 
-          <div class="max-w-[896px] mx-auto px-6 space-y-24">
+          <div class="max-w-[896px] mx-auto px-3 space-y-24">
 
             <!-- Item 1 (Left) -->
             <div class="relative flex flex-col md:flex-row items-center">
@@ -789,7 +794,7 @@
     </div>
   </section>
     
-  <section class="bg-black py-[80px] px-4 sm:px-8 lg:px-[84px]">
+  <section id="contact" class="bg-black py-[80px] px-4 sm:px-8 lg:px-[84px]">
 
   <!-- Heading -->
   <div class="flex flex-col items-center justify-center text-center">
@@ -1008,10 +1013,30 @@
         </h3>
 
         <ul class="space-y-2 text-sm text-gray-400">
-          <li class="hover:text-[#FE9A00] transition cursor-pointer">About</li>
-          <li class="hover:text-[#FE9A00] transition cursor-pointer">Skills</li>
-          <li class="hover:text-[#FE9A00] transition cursor-pointer">Projects</li>
-          <li class="hover:text-[#FE9A00] transition cursor-pointer">Contact</li>
+           <li>
+    <a href="#about" class="hover:text-[#FE9A00] transition cursor-pointer">
+      About
+    </a>
+  </li>
+
+  <li>
+    <a href="#skills" class="hover:text-[#FE9A00] transition cursor-pointer">
+      Skills
+    </a>
+  </li>
+
+  <li>
+    <a href="#projects" class="hover:text-[#FE9A00] transition cursor-pointer">
+      Projects
+    </a>
+  </li>
+
+  <li>
+    <a href="#contact" class="hover:text-[#FE9A00] transition cursor-pointer">
+      Contact
+    </a>
+  </li>
+
         </ul>
 
       </div>
